Fix gap between technologies in css

--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ body {
   padding: 4px 12px;
   border-radius: 8px;
   list-style: none;
+  margin: 0 7px 0 0;
 }
 
 .works__card__btn .btn {
